💾🍮 Checkpoint ./arrasio/src/client/index.html:1039903/970

--- a/arrasio/src/client/index.html
+++ b/arrasio/src/client/index.html
@@ -10,7 +10,7 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>arras.io beta</title>
+    <title>Some not working arras clone</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
@@ -67,9 +67,9 @@
                     <div class="sliderHolder">
                         <div class="slider" id="startMenuSlidingContent">
                             <center><img src="/favicons/favicon-96x96.png" /></center>
-                            <h1>arras.io beta</h1>
+                            <h1>Falied arras clone</h1>
                             <div id="serverName"><h4 class="nopadding">Connecting...</h4></div>
-                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="This is the tale of:" id="playerNameInput" maxlength="24" />
+                            <input type="text" autofocus tabindex="1" spellcheck="false" placeholder="This is the tale of:" id="playerNameInput" maxlength="20" />
                             <input type="text" class="conceal" tabindex="3" placeholder="Token required." id="playerKeyInput" maxlength="64" />
                         </div>
                         <div class="slider" id="startMenuSlidingTrigger"><h3 class="nopadding">view options/help 🡲</h3></div>
@@ -126,24 +126,12 @@
                         </div>    
                     </div>
                     <div style="position: relative; bottom: -10px;">
-                        <button id="startButton" tabindex="2">Play</button>
+                        <button id="startButton" tabindex="2">Play (rip doesnt work)</button>
                     </div>
                 </div>          
                 <div class="startMenuHolder" allowtransparency="true">
                     <iframe id="patchNotesIFrame" src="changelog.html" seamless='seamless' frameBorder="0">Patch notes go here!</iframe>
-                </div>
-                <div id="bottomHolder">
-                    <h5 class="nopadding" style="margin:0; display:inline">Help support the dev: </h5>
-                    <form action="https://www.patreon.com/arras_dev" method="post" target="_top">
-                        <input id="pledge" type="submit" value="Patreon!">
-                    </form>       
-                    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
-                        <input type="hidden" name="cmd" value="_s-xclick">
-                        <input type="hidden" name="hosted_button_id" value="YJ42X4KU6ETPA">
-                        <input id="donate" type="submit" value="Paypal!">
-                        <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-                    </form>     
-                </div>  
+                </div> 
             </div>
         </div>
     </div>
