--- a/arrasio/src/client/index.html
+++ b/arrasio/src/client/index.html
@@ -10,7 +10,7 @@
 <head>
     <!-- Meta Properties -->
     <meta charset="UTF-8">
-    <title>Some not working arras clone</title>
+    <title>Arras, to the OP degree</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <!-- CSS -->
     <link rel="stylesheet" href="css/main.css" />
